MonkFu model with animations

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
     <div>
         <model-viewer
-        id="seal"
-        alt="Seal"
-        src="./src/seal.gltf"
-        ios-src="./src/iosSeal.reality"
-        animation-name="Kabbum.001Action"
+        id="monkfu"
+        alt="MonkFu"
+        src="./src/Monk-Fu_anims.glb"
+        ios-src="./src/MonkFu-Anims.reality"
+        animation-name="54_14_baked"
+        autoplay
         ar
         ar-modes="webxr scene-viewer quick-look"
         shadow-intensity="1"
@@ -27,12 +28,12 @@
             <button onclick="hotspotClickOne(this)"
             class="Hotspot-Btn"
             slot="hotspot-1"
-            data-visibility-attribute="visible">Play
+            data-visibility-attribute="visible">Run
         </button>
         <button onclick="hotspotClickOne(this)"
             class="Hotspot-Btn"
             slot="hotspot-2"
-            data-visibility-attribute="visible">Stop
+            data-visibility-attribute="visible">Backflip
         </button>
         </div>
             <div class="progress-bar hide" slot="progress-bar">
