changed ios src

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         id="monkfu"
         alt="MonkFu"
         src="./src/Monk-Fu_anims.glb"
-        ios-src="./src/MonkFu-Anims.reality"
+        ios-src="./src/MonkFu-final-v2.reality"
         animation-name="54_14_baked"
         autoplay
         ar
